--- a/src/less/main-content.less
+++ b/src/less/main-content.less
@@ -1,12 +1,11 @@
 .content {
   height: 100%;
-  margin-right: 20%;
   display: flex;
-  justify-content: center;
+  flex: 1;
+  flex-direction: column;
 
   .board {
-    width: 300px;
-    height: 300px;
+    height: 400px;
     border: 1px solid black;
     position: relative;
   }
