create a drag handler

--- a/src/less/box.less
+++ b/src/less/box.less
@@ -1,7 +1,9 @@
 .box {
   position: absolute;
-  border: 1px dashed gray;
   background-color: white;
   padding: 0.5rem 1rem;
-  cursor: move;
+
+  &:not(.editing):hover {
+    outline: 1px dashed gray;
+  }
 }
